<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="file_provider_authority">com.crakac.ofuton.fileprovider</string>
    <string name="app_name">Sleeping( ˘ω˘)Syar</string>
    <string name="activity_setting">Settings</string>
    <string name="activity_tweet">Compose Tweet</string>
    <string name="activity_dm">Direct Messages</string>
    <string name="activity_dm_compose">Compose Direct Message</string>
    <string name="activity_conversation">Conversations</string>
    <string name="activity_account">Accounts</string>
    <string name="activity_list">Choose Lists</string>
    <string name="activity_user_detail">User Profile</string>
    <string name="activity_search">Search</string>
    <string name="activity_video_preview">Preview</string>
    <string name="activity_setting_tweet_detail">Tweet Detail</string>
    <string name="select_image">Select image</string>
    <string name="setting">設定</string>
    <string name="auth">認証</string>
    <string name="account">アカウント</string>
    <string name="account_title">Accounts</string>
    <string name="add_account">アカウントを追加</string>
    <string name="twitter_oauth">Twitter認証</string>
    <string name="twitter_callback_url">ofuton://crakac.com/login/syar</string>
    <string name="callback_path">/login/syar</string>
    <string name="connected">接続しました</string>
    <string name="disconnected">接続が切れました</string>
    <string name="dummy">xxxxxxxxxxxxxxxx</string>
    <string name="refresh">Reload</string>
    <string name="action_bar_search">ツイートを検索</string>
    <string name="no_tweet">ツイートはありません</string>
    <string name="no_user">ユーザーはいません</string>
    <string name="show_conversation">会話を表示</string>
    <string name="reply">返信する</string>
    <string name="reply_all">全員に返信する</string>
    <string name="destroy_status">ツイートを削除する</string>
    <string name="retweet">リツイートする</string>
    <string name="unretweet">リツイートを取り消し</string>
    <string name="favorite">お気に入りに追加</string>
    <string name="unfavorite">お気に入りから削除</string>
    <string name="fav_and_retweet">お気に入りに追加してリツイート</string>
    <string name="fav_and_retweet_succeess">お気に入り＆リツイートしました</string>
    <string name="send_dm">DMを送る</string>
    <string name="send_mention">メンションを送る</string>
    <string name="tofu">TofuBuster</string>
    <string name="read_more">もっと読む</string>
    <string name="pull_to_reload">画面を引っ張って読み込み</string>
    <string name="tap_to_reload">タップして再読み込み</string>
    <string name="now_executing">処理中…</string>
    <string name="now_loading">読み込み中</string>
    <string name="loading_list">リストを取得しています…</string>
    <string name="no_list">リストがありません</string>
    <string name="list">リスト</string>
    <string name="location">Location</string>
    <string name="bio">Bio</string>
    <string name="url">URL</string>
    <string name="it_is_you">それはあなたです！</string>
    <string name="add_to_list">リストに追加</string>
    <string name="r4s">スパムとして報告</string>
    <string name="follow">フォローする</string>
    <string name="remove">リムーブする</string>
    <string name="block">ブロックする</string>
    <string name="unblock">ブロックを解除する</string>
    <string name="less_expand">プロフィールを折りたたむ</string>
    <string name="more_expand">プロフィールを表示する</string>
    <string name="tweeted">つぶやきました</string>

    <string name="appended_image">添付画像</string>
    <string name="no_camera">カメラアプリがありません</string>

    <string name="something_wrong">何かがおかしいよ</string>
    <string name="impossible">無理でした</string>
    <string name="syar">( ˘ω˘)ｽﾔｧ</string>
    <string name="reply_format">\@%s\ </string>
    <string name="tweet">Tweet!</string>
    <string name="send">送信</string>

    <string name="drawer_account">アカウント</string>
    <string name="drawer_home">ホーム</string>
    <string name="drawer_mentions">メンション</string>
    <string name="drawer_favs">お気に入り</string>
    <string name="drawer_dms">ダイレクトメッセージ</string>
    <string name="drawer_lists">リスト編集</string>
    <string name="drawer_settings">設定</string>

    <string name="confirm_delete_account">このアカウントをログアウトしますか？</string>
    <string name="ok">OK</string>

    <!-- prefs -->
    <string name="streaming_and_notification">ストリーミング/通知</string>
    <string name="appearance">見た目</string>
    <string name="others">その他</string>

    <string name="notification">通知</string>
    <string name="reply_notification">リプライ</string>
    <string name="fav_notification">お気に入り</string>
    <string name="rt_notification">リツイート</string>
    <string name="new_follower_notification">フォロー</string>
    <string name="dm_notification">DM</string>
    <string name="streaming_mode">ストリーミングモード</string>
    <string name="always_awake">常にスクリーンをON</string>
    <string name="tweet_button_position">ツイートボタン表示位置</string>
    <string name="position_right">右</string>
    <string name="position_center">中央</string>
    <string name="position_left">左</string>
    <string name="font_size">フォントサイズ</string>
    <string name="enable_fast_scroll">高速スクロールを表示</string>
    <string name="enable_refresh_btn">右上にリロードボタンを表示</string>
    <string name="date_display_mode">時刻表記</string>
    <string name="relative">相対表記</string>
    <string name="absolute">絶対表記</string>
    <string name="version_info">バージョン情報</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="use_bigger_icon">アイコンを高画質で表示</string>
    <string name="show_image_in_timeline">タイムラインに画像を表示</string>
    <string name="add_animation">TweetをTween</string>
    <string name="goto_webpage">作者HP</string>
    <string name="homepage">https://crakac.com</string>

    <string name="tweet_detail_setting">ツイート詳細</string>
    <string name="tweet_detail_settings">ツイート詳細ダイアログに表示する項目</string>
    <string name="show_destroy">ツイート削除</string>
    <string name="show_reply">返信</string>
    <string name="show_reply_all">全員に返信</string>
    <string name="show_favorite">お気に入り</string>
    <string name="show_retweet">リツイート</string>
    <string name="show_favorite_key">show_fav</string>
    <string name="show_retweet_key">show_rt</string>
    <string name="show_fav_and_retweet">お気に入りしてリツイート</string>
    <string name="show_accounts_in_tweet">言及されているユーザー</string>
    <string name="show_hashtag">ハッシュタグ</string>

    <string name="sending_tweet">ツイート送信中</string>
    <string name="complete">完了</string>
    <string name="save_complete">画像を保存しました</string>
    <string name="cancel">キャンセル</string>
    <string name="canceled">キャンセルされました</string>
    <string name="preview">プレビュー</string>
    <string name="delete">削除</string>
    <string name="license_info">オープンソースライセンス</string>
    <string name="choose_or_take_picture">画像を選択</string>
    <string name="take_picture">写真を撮影</string>
    <string name="insert_picture">画像を選択</string>
    <string name="show_source">ソースを表示する</string>
    <string name="download">ダウンロード</string>
    <string name="complete_download">ダウンロードが完了しました</string>

    <string name="tofubuster_package">com.product.kanzmrsw.tofubuster</string>
</resources>