<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/dark_gray"
        android:elevation="4dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat"
        />

    <FrameLayout
        android:id="@+id/profile"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_below="@id/toolbar"
        android:background="@color/dark_gray">
        <ImageView
            android:alpha="0.2"
            android:id="@+id/header_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@null" />
        <LinearLayout
            android:id="@+id/profile_contents"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="4dp">

                <ImageView
                    android:id="@+id/icon"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:foreground="@drawable/image_ripple"
                    android:layout_margin="8dp"
                    android:cropToPadding="true"
                    android:src="@color/transparent_black"
                    android:scaleType="centerCrop" />

                <ImageView
                    android:id="@+id/lockedIcon"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_alignBottom="@+id/icon"
                    android:layout_alignRight="@+id/icon"
                    android:tint="@color/light_gray" app:srcCompat="@drawable/ic_lock"
                    android:visibility="visible" />

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentBottom="true"
                    android:layout_below="@+id/icon"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="4dp"
                    android:background="@android:color/white"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp">

                    <TextView
                        android:id="@+id/relationText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:maxLines="1"
                        android:text="@string/dummy"
                        android:textColor="@color/twitter_blue"
                        android:textStyle="bold"
                        android:textSize="12sp" />
                </FrameLayout>
            </RelativeLayout>

            <ScrollView
                android:layout_width="0dp"
                android:fadingEdge="none"
                android:layout_height="match_parent"
                android:layout_weight="1.0">

                <LinearLayout
                    android:id="@+id/userProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="6dp">

                    <TextView
                        android:id="@+id/location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/location"
                        android:textAppearance="@style/userDetail" />

                    <TextView
                        android:id="@+id/locationText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="3dp"
                        android:text="@string/dummy"
                        android:textAppearance="@style/userDetailText" />

                    <TextView
                        android:id="@+id/bio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bio"
                        android:textAppearance="@style/userDetail" />

                    <TextView
                        android:id="@+id/bioText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="3dp"
                        android:text="@string/dummy"
                        android:textAppearance="@style/userDetailText"
                        android:textColorLink="@color/twitter_blue" />

                    <TextView
                        android:id="@+id/url"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/url"
                        android:textAppearance="@style/userDetail" />

                    <TextView
                        android:id="@+id/urlText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autoLink="web"
                        android:text="@string/dummy"
                        android:textAppearance="@style/userDetailText"
                        android:textColorLink="@color/twitter_blue" />
                </LinearLayout>
            </ScrollView>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/loading_spinner"
            style="?android:progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>

    <android.support.design.widget.TabLayout
        android:id="@+id/tab"
        android:layout_width="match_parent"
        android:minHeight="32dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile"
        android:background="?attr/colorPrimary"
        app:tabGravity="fill"
        app:tabMode="fixed"
        app:tabTextAppearance="@style/TablayoutTextAppearance" />

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tab" />

</RelativeLayout>